0.7.5
=====

2009-05-22
 * Changed way how MPC ephemerides are stored in database and handled

2009-05-17
 * MPC data are stored in tar_info

2009-05-08
 * queue executor - it is now able to accept queue command to queue next targets
 * startResync function for telescope, change in how abberation etc. are reported

2009-05-06
 * getMinFlatHeigh, min_flat_heigh
 * improvements of rts2-simbadinfo, added manual page

2009-05-04
 * added possibility to select minimal airmass distance for calibration observation selection

2009-05-03
 * changed Camera::readoutOneLine to doReadout
 * variables names are case insensitive (even in scripts)
 * queue command for executor (executor enables queing of targets)

2009-05-02
 * added %N, %Y, %D , %O and %a expansions
 * changed focuser driver - added offsets for different values

2009-04-19
 * removed flip from rts2.ini, as it is now stored directly in camera

2009-04-18
 * fixed architecture issues (use ntohs, htons,..)

2009-04-17
 * migrating lot of sources to namespaces for better documentation
 * creating librts2teld, librts2camd, librts2focusd etc..

2009-04-14
 * preliminary support for EPICS

2009-01-06
 * [2452561] added airmass,..

2008-12-28
 * [1913503] fixed problems with INDI

2008-12-14
 * [2315461] record environment values

2008-11-22
 * [2074047] fixed

2008-10-15
 * [2170371] fixed

2008-10-03
 * [1911238] added newport lamp driver

2008-10-01
 * [1742446] partial readout of the chip

2008-09-23
 * commited new dome modules
 * added rts2-mood, devices for weather,..

2008-09-02
 * [2089418] added
 * some scheduling works

2008-08-27
 * [2078147] fixed

2008-08-13
 * [2048653] fixed

2008-08-09
 * -e option for rts2-scriptexec

2008-08-02
 * [2029682] path are configurable

2008-08-01
 * xfocusc with zooming, nine option, ..

2008-07-20
 * [1929674] fixed
 * [1958123] fixed

2008-07-19
 * [2022355] fixed

2008-07-02
 * [2008885] Added SuperAGILE support.

2008-06-13
 * added miniccd interlaced driver